css/style.css
/* ... */
@media(max-width: 991px){
  .top-nav ul li a {
    font-size: 0.89em;
}

}

.top-nav ul li a:hover,
.top-nav ul li a:focus {
  outline: none;
}
.cl-effect-15 a::before {
  color: #fff;
  content: attr(data-hover);
  position: absolute;
  -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
  -moz-transition: -moz-transform 0.3s, opacity 0.3s;
  transition: transform 0.3s, opacity 0.3s;
}

.cl-effect-15 a:hover::before,
.cl-effect-15 a:focus::before {
  -webkit-transform: scale(0.9);
  -moz-transform: scale(0.9);
  transform: scale(0.9);
  opacity: 0;
}
.fixed {
    position: fixed;
    top: 0;
    width: 100%;
    margin: 0 auto;
    left: 0;
  /*border-bottom: 2px solid #5BD982;*/
}

.container2{
    float:right;
    padding-right:5%;
}

.navLogo {
    float:left;
    padding-left:5%;
}

#navDropdown{
  color:#fff;
}


/*--//top-nav--*/



/*--about--*/
.about,.testimonial ,.gallery,.special, .news, .services,.testimonials, .like ,.contact{
    padding: 3em 0;
}

.contacts{
  padding: 1.5em 0;
}

h3.title1 {
    font-size: 3em;
    text-align: left;
    color:#c4bcbc;
    margin-left: 15px;
    font-family: 'Arimo', sans-serif;
    font-weight:400;
}

h3.title2 {
    font-size: 3em;
    text-align: left;
  color:#c4bcbc;
    font-family: 'Arimo', sans-serif;
    font-weight:400;
}


.about p {
    font-size: 2em;
    color: #777;
    text-align: justify;
    /*width: 42%;*/
    margin: 0 auto;
    line-height: 1.8em;
}

#about2 p {
    font-size: 1em;
    color: #777;
    text-align: justify;
    margin: 3em auto;
    line-height: 1.8em;
}


#theme p {
    font-size: 1.3em;
    color: #777;
    margin: 1em auto 3em ;
    line-height: 1.8em;
}

#theme h2{
    color: #902939;
    text-transform: uppercase;
    text-align:center;
}




.flex-video {
position: relative;
padding-top: 25px;
height: 0;
margin-bottom: 16px;
overflow: hidden;
}
 
.flex-video.widescreen { padding-bottom: 50%; }
.flex-video.vimeo { padding-top: 0; }
 
.flex-video iframe,
.flex-video object,
.flex-video embed {
position: absolute;
top: 0;
left: 10%;
width: 80%;
height: 100%;
}
@media only screen and (max-device-width: 800px), only screen and (device-width: 1024px) and (device-height: 600px), only screen and (width: 1280px) and (orientation: landscape), only screen and (device-width: 800px), only screen and (max-width: 767px) {
.flex-video { padding-top: 0; }
}
/*--//about--*/

/*Contact Page*/

.contactContainer{
    width:70%;
    margin: 0 auto;
}

.contactContainer h1{
font-size: 3.5.em;
padding: 20px 0;
}

.contactContainer h2{
font-size: 3em;

}

.contact-info li{
  display:inline-block;
  list-style: none;
  padding: 0;
  margin: 0;
  font-size: 1.5em;
}

.contact-info a{
  display: block; /*each image will take up space*/
  min-height: 20px; /*set the min height to each image to 20px*/
  background-repeat: no-repeat; /*background images will repeat by default, this stops that*/
  background-size: 20px 20px;/*resize the background image to half*/
  margin: 0 0 10px;
}
/*--//Contact Page--*/



/*Quick Links*/
.quickLinksRow{
    width:100%;
    margin: 0;
    background-color: #000;
    min-height: 275px; 
    letter-spacing: 5px;    
}

.quickLinks, .quickLinksRow div{
  padding:0;
}

.quickLinksRow div a:hover {
    background-color:#fff;
}


.worship-link{
    background: url(../images/Worship.png)no-repeat 0px 0px;
    background-size: cover;
    min-height: 275px;
    display: block;
}



.speakers-link{
    background: url(../images/Speakers.png)no-repeat 0px 0px;
    background-size: cover;
    display: block;
    min-height: 275px;
}


.registration-link{
    background: url(../images/registerNow.png)no-repeat 0px 0px;
    background-size: cover;
    display: block;
    min-height: 275px;
}

.link-text{
    color:#fff;
    text-align: center;
    font-size: 40px;
    padding: 3em 0 2em 0;
    font-family: 'Arimo', sans-serif;
    font-weight: 700;
}

.link-text-com{
    color:#fff;
    text-align: center;
    line-height: 80%;
    font-size: 40px;
    padding: 2.6em 0;
    font-family: 'Arimo', sans-serif;
    font-weight: 700;
}
/*--//Quick Links--*/



/*--testimonial--*/
.testimonial {
    background-color: #6FCFD0;
    min-height:348px;
    color: #fff;
}

.testimonial-name {
    font-family: 'Arimo', sans-serif;
    font-weight: 700;
}

#testimonial-icon{
  display: block;
  max-width: 100%;
  height: auto;
  margin-left: auto;
  margin-right: auto;
}
/*--//testimonial--*/



/*--Contact--*/
.contacts{
    text-align:center;
}

.social-links{
    background-color: #fff;
    padding: 2em 0;

}

.contactUs{
    background-color: #fff;
    padding: 2em 0;
}

/*--//Contact--*/


/*--Donate*/

.donate p {
    font-size: 1.3em;
    color: #777;
    text-align: justify;
    margin: 0em auto 1em;
    line-height: 1.8em;
}

@media (max-width: 480px){
.donate p{
  font-size: 1em;
}
}

.donate{
  text-align: center;
}

.donate h1{
  padding-top:1em;
  color:#902939;
  text-transform: uppercase;
}

.donate h2{
  padding-top:1em;
  text-transform: uppercase;
}

.donate h3, h4{
  text-align: left;
}

.donate ul li{
  text-align: left;
}
/*--//Donate--*/

/*--Registration*/

.registration p {
    font-size: 1.3em;
    color: #777;
    text-align: justify;
    margin: 0em auto 1em;
    line-height: 1.8em;
}

@media (max-width: 480px){
.registration p{
  font-size: 1em;
}
}

.registration{
  text-align: center;
}

.registration h1{
  padding-top:1em;
  color:#902939;
  text-transform: uppercase;
}

.registration h2{
  padding-top:1em;
  text-transform: uppercase;
}

.registration h3, h4{
  text-align: left;
}
#registrationbtn{
  font-size:1.5em;
 }

.registration ul li{
  text-align: left;
}

/*--//Registration--*/

/*--Get Involved*/

.get-involved p {
    font-size: 1.3em;
    color: #777;
    text-align: justify;
    margin: 0em auto 1em;
    line-height: 1.8em;
}
/* ... */

